css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Montserrat', sans-serif;
}

:root{
    --main-accent-color: white;
    --secondary-accent-color: #7a7c82;
}

/* UTILITIES */

.flex-container{
    display: flex;
}

.flex-wrap{
    flex-wrap: wrap;
}

.flex-center{
    align-items: center;
    justify-content: center;
}

.flex-column{
    flex-direction: column;
}

.flex-between{
    justify-content: space-between;
}

.p-relative{
    position: relative;
}

.p-absolute{
    position: absolute;
}

.margin-bot{
    margin-bottom: 1.5rem;
}

.c-white{
    color: var(--main-accent-color);
}

.c-white a{
    color: var(--main-accent-color);
}

/* Principal parts */
header{
    width: 220px;
    height: calc(100% - 100px);
    background-color: black;
    color: var(--secondary-accent-color);
    position: fixed;
    padding: 1.5rem 1rem 0.5rem;
    font-weight: 600;
}

main{
    width: calc(100% - 220px);
    background-color: #141922;
    overflow-y: auto;
    padding-bottom: 10rem;
    right: 0;
}

footer{
    height: 100px;
    width: 100%;
    background-color: #282828;
    position: fixed;
    bottom: 0;
    padding: 1rem 0.5rem;
    color: var(--secondary-accent-color);
}

ul{
    list-style-type: none;
}

a{
    text-decoration: none;
    color: white;
}

/* HEADER PART */
.logo-icon{
    width: 65%;
}

.small-logo{
    display: none;
}

header li a{
    line-height: 2.5rem;
    color: var(--secondary-accent-color);
    transition: all 0.3s;
}

header div a{
    color: var(--secondary-accent-color);
}

header li a:hover{
    color: white;
    transition: all 0.3s;
}

.create-tool:hover span a{
    color: white;
    transition: all 0.3s;
}

.create-tool:hover .add-icon a{
    background-color: white;
    color: black;
}

header div a:hover{
    color: white;
    transition: all 0.3s;
}


.main-nav li img{
    height: 1.85rem;
    display: inline;
    vertical-align:middle;
}

.main-nav ul li{
    border-left: 2px solid black;
    position: relative;
    right: 1rem;
    padding-left: 1rem;
}

.main-nav ul li:first-child{
    border-left: 2px solid #bbff30;
    position: relative;
    right: 1rem;
    padding-left: 1rem;
}

.main-nav li.w-border:hover{
    border-left: 2px solid white;
    transition: all 0.3s;
}

.playlists h3{
    margin-bottom: 0.8rem;
}

.create-tool{
    font-size: 1.1rem;
    margin-bottom: 1rem;
}

.add-icon a{
    font-size: 2.5rem;
    color: black;
    background-color: var(--secondary-accent-color);
    padding: 0 0.8rem;
    vertical-align: middle;
    margin-right: 0.5rem;
}

.download{
    margin-bottom: 0.7rem;
}

.download img{
    height: 1.2rem;
    margin-right: 0.2rem;
    display: inline;
    vertical-align: bottom;
}

.divider{
    border-top: 1px solid #b8bbc4;
    margin-bottom: 1.1rem;
}

.profile img{
    height: 2rem;
    margin-right: 0.2rem;
    display: inline;
    background-color: #7a7c82;
    padding: 0.2rem 0.3rem;
    border-radius: 50%;
    vertical-align: middle;
}

/* MAIN PART */
/* Upper main sections */
main a{
    color: var(--secondary-accent-color);
}

main li{
    display: inline-block;
}

.upgrade{
    width: 100%;
    height: 100px;
    background-color: #080b12;
    justify-content: flex-end;
    align-items: center;
    text-transform: uppercase;
    padding: 0 1.5rem;
}

.upgrade a{
    color: var(--main-accent-color);
    font-weight: 500;
    border: 2px solid white;
    padding: 1rem 2.5rem;
    border-radius: 30px;
    transition: all 0.3s;
}

.upgrade a:hover{
    transform: scale(1.1);
}

.categories{
    width: 100%;
    padding: 1rem 0;
    color: var(--secondary-accent-color);
    text-transform: uppercase;
    font-weight: bold;
}

.categories li{
    margin: 0 1rem 1.5rem;
}

.categories li a:hover{
    color: var(--main-accent-color);
    transition: all 0.6s;
}

main li div{
    width: 45px;
    border-bottom: 2px solid #141922;
    margin-left: 2rem;
    margin-top: 0.2rem;
}

li #evidence{
    width: 45px;
    border-bottom: 2px solid #bbff30;
    margin-left: 2rem;
    margin-top: 0.2rem;
}

/* Music discs sections */
.music-part{
    padding: 0 1.2rem;
}

.title h1{
    font-size: 1.7rem;
}

.title p{
    font-size: 0.8rem;
}

.row-discs{
    width: 100%;
}

.music-cover .layover{
    width: 100%;
    height: 100%;
    position: absolute;
}

.layover .cover{
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.0);
    transition: all 0.4s;
}

.layover a{
    color: white;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: all 0.4s;
}

main .fa-circle-play{
    font-size: 3rem;
}

.music-cover img{
    width: 100%;
    max-width: 100%;
}

.music-cover:hover .layover .cover{
    background-color: rgba(0, 0, 0, 0.5);
}

.music-cover:hover .layover a{
    opacity: 1;
}

.disc-box figcaption{
    text-align: center;
    color: var(--main-accent-color);
    overflow: hidden;
    width: 100%;
}

.disc-box p,
.title p{
    color: var(--secondary-accent-color);
    font-weight: 600;
    margin-top: 0.5rem;
}

/* Recently */
.recently-music{
    width: 100%;
    color: var(--main-accent-color);
}

.recently-music .disc-box{
    width: calc((100% / 6) - 1.5vw);
    margin: 1.5rem 1.5vw 3rem 0;
}

/* For you */
.your-music,
.popolar-artists{
    width: calc(100% / 3);
    color: var(--main-accent-color);
}

.your-music .disc-box{
    width: calc((100% / 2) - 1.5vw);
    margin: 1.5rem 1.5vw 3rem 0;
}

/* Artists */
.popolar-artists .disc-box{
    width: calc((100% / 2) - 1.5vw);
    margin: 1.5rem 1.5vw 3rem 0;
}

.popolar-artists img{
    border-radius: 50%;
}

.popolar-artists .layover,
.popolar-artists .cover{
    border-radius: 50%;
}

/* FOOTER PART */
footer section{
    width: calc(100% / 3);
}

footer li{
    display: inline-block;
    font-size: 1.1rem;
    padding: 0 0.8rem;
}

footer section p{
    font-size: 0.8rem;
}

/* Left player */
.player-left{
    align-items: center;
}

.player-left img{
    height: 3.5rem;
    margin-right: 1rem;
}

.description{
    display: inline-block;
}

.description p a{
    color: var(--secondary-accent-color);
    transition: all 0.3s;
}

.description p a:hover{
    color: var(--main-accent-color);
    text-decoration: underline;
}

.left-tools{
    padding-left: 2rem;
    font-size: 1.2rem;
}

.left-tools a{
    color: var(--secondary-accent-color);
    padding-right: 0.8rem;
    transition: all 0.3s;
}

.left-tools a:hover{
    color: var(--main-accent-color);
}

/* Main player */
.play-tools{
    width: 100%;
    text-align: center;
}

footer .fa-circle-play{
    font-size: 2rem;
    vertical-align: middle;
    transition: all 0.2s;
}

footer .fa-circle-play:hover{
    transform: scale(1.2);
}

.play-duration{
    width: 100%;
    text-align: center;
}

.play-duration li{
    width: 10%;
}

.play-duration .reproduction{
    width: 80%;
}

.play-duration span{
    font-size: 0.7rem;
    color: var(--main-accent-color);
}

.play-duration .play-line{
    margin-top: 0.8rem;
}

.play-line span:first-child{
    width: 30%;
    border-bottom: 3px solid white;
}

.play-line span>.fa-circle{
    position: absolute;
    font-size: 0.8rem;
    right: 0;
    top: -3px;
    display: none;
}

.play-line:hover span>.fa-circle{
    display: block;
}

.play-line:hover span:first-child{
    border-bottom: 5px solid #bbff30;
}

.play-line span:last-child{
    width: 70%;
    border-bottom: 3px solid var(--secondary-accent-color);
}

.play-line:hover span:last-child{
    border-bottom: 5px solid var(--secondary-accent-color);
}

/* Right part */
.volume{
    justify-content: flex-end;
}

.right-tools{
    margin-top: 0.8rem;
}

.right-tools li{
    padding: 0 0.5rem;
}

.right-tools li:last-child{
    vertical-align: text-top;
    margin-top: 0.4rem;
}

.volume-line{
    width: 5vw;
}

.volume-line span:first-child{
    width: 25%;
    border-top: 3.5px solid white;
}

.volume-line span>.fa-circle{
    position: absolute;
    font-size: 0.7rem;
    right: -4px;
    bottom: -4px;
    color: white;
    display: none;
}

.volume-line:hover span:first-child{
    border-top: 4.5px solid #bbff30;
}

.volume-line:hover span>.fa-circle{
    display: block;
}

.volume-line span:last-child{
    width: 75%;
    border-top: 3.5px solid var(--secondary-accent-color);
}

.volume-line:hover span:last-child{
    border-top: 4.5px solid var(--secondary-accent-color);
}

/* RESPONSIVE */

/* Medium view */
@media screen and (max-width: 992px) {
    .recently-music .disc-box{
        width: calc((100% / 4) - 1.5vw);
        margin: 1.5rem 1.5vw 3rem 0;
    }

    .your-music .disc-box,
    .popolar-artists .disc-box{
        width: calc((100% / 2) - 1.5vw);
        margin: 1.5rem 1.5vw 3rem 0;
    }

    .your-music,
    .popolar-artists{
        width: 50%;
    }

    .disc-box figcaption{
        font-size: 0.8rem;
    }
}

/* Height view */
@media screen and (max-height: 850px) {
    .upper-menu{
        overflow: auto;
    }

    .create-tool span:last-child{
        font-size: 1rem;
    }

    .down-menu{
        margin-top: 1rem;
    }
}

/* Small view */
@media screen and (max-width: 768px) {
    .recently-music .disc-box,
    .your-music .disc-box,
    .popolar-artists .disc-box{
        width: calc((100% / 2) - 2vw);
        margin: 1.5rem 2vw 3rem 0;
    }

    .your-music,
    .popolar-artists{
        width: 100%;
    }

    .title{
        font-size: 1.3rem;
    }

    .disc-box figcaption{
        font-size: 1rem;
    }

    .left-tools{
        flex-direction: column;
        padding-bottom: 1.2rem;
    }

    footer i{
        font-size: 0.8rem;
    }

    footer section h4{
        font-size: 0.8rem;
    }

    .left-tools{
        padding-left: 1rem;
    }

    .play-duration ul li:first-child{
        margin-right: 0.5rem;
    }
}

/* Extra-small view */
@media screen and (max-width: 576px) {
    header{
        width: 50px;
        padding: 0.5rem 0.5rem;
    }

    .main-nav span,
    .logo-icon,
    .playlists,
    .down-menu span,
    .down-menu .divider{
        display: none;
    }

    .main-nav li{
        margin-bottom: 0.7rem;
    }

    .small-logo{
        display: block;
        width: 2rem;
    }

    .download img{
        padding-left: 0.3rem;
    }

    main{
        width: calc(100% - 50px);
    }

    .categories li{
        margin: 0 0.5rem 1.5rem;
    }
}

